fixes and modifications so that the createREservation gets through; TODO comments added